syntax = "proto3";

package ai.metathings.service.evaluatord;

option go_package = "evaluatord";

import "validate/validate.proto";

import "model.proto";

message DeleteEvaluatorRequest {
	OpEvaluator evaluator = 1 [(validate.rules).message.required = true];
}
